Fleshing out site

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Tajawal&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/common.css">
-		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/about.css">
 	</head>
 	<body>
 		<div class="overlay" style="display: none;">
@@ -15,7 +15,7 @@
 			<div class="overlay-content"></div>
 		</div>
 		<div class="nav-container">
-			<h1>MAKE IT WORK</h1>
+			<h1>camila cruz</h1>
 			<nav>
 				<a href="index.html" class="mustard">home</a>
 				<!--<a href="idk.html" class="orange">idk</a>-->
@@ -24,29 +24,29 @@
 			</nav>
 		</div>
 		
-		<div class="content text-center">
-			<div id="communications" class="flex content-item">
-				<div>
-					<img src="assets/img4.png" />
+		<div class="content">
+			<div id="about" class="tajawal">
+				<div class="flex flex-center">
+					<img class="profile-img overlay-target" src="assets/img1.png">	
+				</div>
+				<div class="description text-center">
+					<h2>ABOUT ME</h2>
+					<p>Who am I?</p>
+					<p>I'm a 23-year-old Gemini residing in the heart of Texas. I graduated in 2018 with a Communications degree with a minor in Psychology from Texas A&M International University. I'm a creative maverick. I thrive in environments where creativity is encouraged. I love a good challenge, and I'm always down to learn new things.  More on that on my resume.</p>
+					<p>I moved to Austin for its fresh perspective and its funky vibe. Although I might be new to the city I think I can already call it home. Some of my interests are fashion, music, and comedy. Some of my hobbies are painting, photography, going to concerts and watching stand up comedy. </p>
+					<p>I'm ready for anything!</p>
 				</div>
 				<div>
-					<h3>COMMUNICATIONS</h3>
-				</div>
-			</div>
-			<div id="advertising" class="flex content-item">
-				<div>
-					<h3>ADVERTISING</h3>
-				</div>
-				<div>
-					<img src="assets/img2.png" />
-				</div>
-			</div>
-			<div id="social-media" class="flex content-item">
-				<div>
-					<img src="assets/img3.png" />
-				</div>
-				<div>
-					<h3>SOCIAL MEDIA</h3>
+					<ul class="star-list">
+						<li>Content Creation</li>
+						<li>Social Media</li>
+						<li>Creative Writing</li>
+						<li>Photography</li>
+						<li>Adobe Creative Suite</li>
+						<li>Video Production</li>
+						<li>Microsoft Office</li>
+						<li>Spanish (Native)</li>
+					</ul>
 				</div>
 			</div>
 		</div>
