Styling changes to nav links

--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
 		<div class="nav-container">
 			<h1>camila cruz</h1>
 			<nav>
-				<a href="index.html" class="mustard">home</a>
+				<a href="index.html" class="color1">home</a>
 				<!--<a href="idk.html" class="orange">idk</a>-->
-				<a href="about.html" class="violet">about</a>
-				<a href="samples.html" class="lemon">samples</a>
+				<a href="about.html" class="color2">about</a>
+				<a href="samples.html" class="color3">samples</a>
 			</nav>
 		</div>
 		
