Added some new fonts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>camila cruz</title>
 		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-		<link href="https://fonts.googleapis.com/css?family=Tajawal&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Tajawal|Bebas+Neue|Crimson+Text&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/common.css">
 		<link rel="stylesheet" href="css/index.css">
 	</head>
@@ -15,7 +15,7 @@
 			<div class="overlay-content"></div>
 		</div>
 		<div class="nav-container">
-			<h1>MAKE IT WORK</h1>
+			<h1>make it work</h1>
 			<nav>
 				<a href="index.html" class="color1">home</a>
 				<!--<a href="idk.html" class="orange">idk</a>-->
