--- a/samples.html
+++ b/samples.html
@@ -5,7 +5,7 @@
 		<title>camila cruz</title>
 		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-		<link href="https://fonts.googleapis.com/css?family=Tajawal|Bad+Script&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Tajawal|Bad+Script|Bebas+Neue|Crimson+Text&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/common.css">
 		<link rel="stylesheet" href="css/samples.css">
 	</head>
