--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 		<title>camila cruz</title>
 		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-		<link href="https://fonts.googleapis.com/css?family=Tajawal&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Tajawal|Bebas+Neue|Crimson+Text&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/common.css">
 		<link rel="stylesheet" href="css/about.css">
 	</head>
@@ -30,7 +30,7 @@
 					<img class="profile-img overlay-target" src="assets/img1.png">	
 				</div>
 				<div class="description text-center">
-					<h2>ABOUT ME</h2>
+					<h2>about me</h2>
 					<p>Who am I?</p>
 					<p>I'm a 23-year-old Gemini residing in the heart of Texas. I graduated in 2018 with a Communications degree with a minor in Psychology from Texas A&M International University. I'm a creative maverick. I thrive in environments where creativity is encouraged. I love a good challenge, and I'm always down to learn new things.  More on that on my resume.</p>
 					<p>I moved to Austin for its fresh perspective and its funky vibe. Although I might be new to the city I think I can already call it home. Some of my interests are fashion, music, and comedy. Some of my hobbies are painting, photography, going to concerts and watching stand up comedy. </p>
