--- a/about.html
+++ b/about.html
@@ -27,14 +27,13 @@
 		<div class="content">
 			<div id="about" class="tajawal">
 				<div class="flex flex-center">
-					<img class="profile-img overlay-target" src="assets/img1.png">	
+					<img class="profile-img overlay-target" src="assets/camila_2021.png">	
 				</div>
 				<div class="description text-center">
 					<h2>about me</h2>
-					<p>Who am I?</p>
-					<p>I'm a 23-year-old Gemini residing in the heart of Texas. I graduated in 2018 with a Communications degree with a minor in Psychology from Texas A&M International University. I'm a creative maverick. I thrive in environments where creativity is encouraged. I love a good challenge, and I'm always down to learn new things.  More on that on my resume.</p>
-					<p>I moved to Austin for its fresh perspective and its funky vibe. Although I might be new to the city I think I can already call it home. Some of my interests are fashion, music, and comedy. Some of my hobbies are painting, photography, going to concerts and watching stand up comedy. </p>
-					<p>I'm ready for anything!</p>
+					<p>Howdy,</p>
+					<p>I am Camila Cruz, a 25-year-old Gemini residing in the heart of Texas! I graduated with a B.A in Communication from Texas A&M International University in 2018 and I'm an extremely online person... I have an excellent grasp of key social media platforms such as Instagram, Facebook, Twitter, and TikTok.</p>
+					<p>I'm a creative maverick. I thrive in environments where creativity and problem-solving are encouraged. I love a good challenge, and I'm always ready to learn new things. My education combined with my professional experience makes digital communication, scheduling, event planning, and campaign managing a breeze to me. Interested to learn more? Check out my <a href="assets/camila_resume2021.pdf">resume</a>!</p>
 				</div>
 				<div>
 					<ul class="star-list">
@@ -53,7 +52,7 @@
 		<footer class="text-center">
 			<div class="footer-content">
 				<div class="footer-txt">
-					<p>&copy; by Camila Cruz 2019</p>
+					<p>&copy; by Camila Cruz 2021</p>
 				</div>
 				<div class="icons">
 					<a href="https://www.facebook.com/camila.cruz.soto" target="_blank"><i class="fab fa-facebook-square"></i></a>
